welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: ';' expected but integer literal found.
	if (( num % 10 + 2 )== 0 || (num % 10 -2 )== 0 || num % 10 + 1 )== 0  ) {
                                                                           ^